@@ -7,6 +7,8 @@ Revision history for Perl extension App::Sqitch
        found.
      - Fixed the Postgres tests to skip the live tests if `psql` cannot be
        found or cannot connect to the database.
+     - Fixed the `checkout` test to skip tests that depend on Git and Git is
+       not found in the path.
 
 0.960  2013-04-05T23:04:35Z
      - Removed `-CAS` from the shebang line on Perl 5.10.0. This is to
